// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replay ADDED_TODO event can add todos as children of children 1`] = `
Array [
  Object {
    "id": 1,
    "title": "Create a parent todo",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "id": 5,
            "parentId": 3,
            "title": "Create a child todo of child of parent 2",
          },
          Object {
            "children": Array [
              Object {
                "id": 7,
                "parentId": 6,
                "title": "Create a child of 2nd child of child of parent 2",
              },
            ],
            "id": 6,
            "parentId": 3,
            "title": "Create a second child todo of child of parent 2",
          },
        ],
        "id": 3,
        "parentId": 2,
        "title": "Create a child in another parent todo",
      },
    ],
    "id": 2,
    "title": "Create another parent todo",
  },
  Object {
    "id": 4,
    "title": "Create a third parent todo",
  },
]
`;

exports[`replay ADDED_TODO event can add todos in a more complex example 1`] = `
Array [
  Object {
    "id": 1,
    "title": "Create a parent todo",
  },
  Object {
    "children": Array [
      Object {
        "id": 3,
        "parentId": 2,
        "title": "Create a child in another parent todo",
      },
      Object {
        "id": 5,
        "parentId": 2,
        "title": "Create another child todo in parent 2",
      },
    ],
    "id": 2,
    "title": "Create another parent todo",
  },
  Object {
    "id": 4,
    "title": "Create a third parent todo",
  },
]
`;
